--- a/2017-06-19/de/bulletin.tex
+++ b/2017-06-19/de/bulletin.tex
@@ -1,4 +1,4 @@
-ss[11pt, a4paper]{scrartcl}
+\documentclass[11pt, a4paper]{scrartcl}
 \usepackage[top=1cm, bottom=1cm, left=1cm, right=1cm]{geometry}
 \usepackage{fontspec}
 \usepackage{xltxtra}
