--- a/2018-01-17/it/bulletin.tex
+++ b/2018-01-17/it/bulletin.tex
@@ -135,7 +135,7 @@ Dépouillement \hfill Laissez vide! \\
 
 \newpage
 
-\begin{minipage}[t][12.5cm][t]{\textwidth}
+\begin{minipage}[t][12.5cm][t]{17.7cm}
 
 \begin{textblock}{6}(7.5,0)
 \includegraphics[width=7.5cm]{ww.pdf}
