--- a/2018-01-17/fr/bulletin.tex
+++ b/2018-01-17/fr/bulletin.tex
@@ -174,7 +174,7 @@ Acceptez-vous l'initiative No-Billag \enquote{Oui à la suppression des redevanc
 
 \vspace{0.5cm}
 
-\textbf{Abstimmung 2}
+\textbf{Votation 2}
 
 \vspace{0.5cm}
 
