Next votation at 2018-08-17

--- a/2018-08-17/it/fr/bulletin.tex
+++ b/2018-08-17/it/fr/bulletin.tex
@@ -7,7 +7,7 @@
 \usepackage{textpos}
 \usepackage{eso-pic}
 \usepackage{framed}
-\usepackage[german=swiss]{csquotes}
+\usepackage[autostyle]{csquotes}
 \usepackage[english,french,italian,ngerman]{babel}
 \usepackage{setspace}
 \usepackage{array}
@@ -54,7 +54,7 @@ plier ici \hspace{3.5cm} plier ici \hspace{3.5cm} plier ici
 \textbf{Matériel de vote} pour la \\
 \textbf{Votation de base} du \\
 Parti Pirate Suisse \\
-le 17~Janvier~2018
+le 13~août~2018
 
 }
 
@@ -69,7 +69,7 @@ Pour voter procédez comme suit:
 \item Remplissez le bulletin de vote selon vos préférences.
 \item Glissez le bulletin de vote dans une enveloppe et fermez la soigneusement.
 \item Glissez cette enveloppe contenant le bulletin ainsi que la carte d'électeur ensemble dans une deuxième enveloppe (plus grande) et refermez bien celle-ci également.
-\item Envoyez cette enveloppe complète à l'adresse indiquée sur la carte d'électeur jusqu'au \textbf{17~Janvier~2018}.
+\item Envoyez cette enveloppe complète à l'adresse indiquée sur la carte d'électeur jusqu'au \textbf{13~août~2018}.
 \end{enumerate}
 \end{textblock}
 
@@ -93,7 +93,7 @@ Präsidium der Piratenversammlung \\
 \end{textblock}
 
 {\LARGE\textbf{Carte d'électeur}} \\
-pour la votation de base du 17~Janvier~2018 \\
+pour la votation de base du 13~août~2018 \\
 
 numéro de membre \textbf{\id}   \\
 \givenname~\surname         \\
@@ -141,12 +141,12 @@ Dépouillement \hfill Laissez vide! \\
 \includegraphics[width=7.5cm]{ww.pdf}
 \end{textblock}
 
-{\LARGE\textbf{Bulletin de vote}} \\
-pour la votation de base du 17~Janvier~2018 \\
+{\LARGE\textbf{Bulletin de vote 1}} \\
+pour la votation de base du 17~août~2018 \\
 
 \vspace{2cm}
 
-\textbf{Prise de position pour l'initiative \enquote{No-Billag}}
+\textbf{Prise de position pour l'initiative \enquote{Pour la souveraineté alimentaire}}
 
 \vspace{0.1cm}
 Les votes valides sont \enquote{Oui}, \enquote{Non} und \enquote{Abstention}.
@@ -154,9 +154,7 @@ Les votes valides sont \enquote{Oui}, \enquote{Non} und \enquote{Abstention}.
 \vspace{0.1cm}
 Une prise de position doit être faite en deux votes distincts, conformément à l'article 6, paragraphe 3, du Règlement de l'Assemblée générale et au Règlement de vote.
 
-Les dispositions transitoires de l'article B, paragraphe 3, prévoient que, dans le cas de vote effectué par bulletin envoyé par la poste, les deux votes sont effectués en même temps par bulletin de vote de consentement.
-
- "oui", "non" ou "abstention"  
+Les dispositions transitoires de l'article B, paragraphe 3, prévoient que, dans le cas de vote effectué par bulletin envoyé par la poste, les deux votes sont effectués en même temps par bulletin de vote de consentement "oui", "non" ou "abstention". 
 
 \vspace{0.1cm}
 Vous pouvez donc répondre \enquote{Oui}, \enquote{Non} oder \enquote{Abstention} à chaque question. L'option choisie pour chaque votation est celle de la majorité simple des "oui".
@@ -168,20 +166,138 @@ Vous pouvez donc répondre \enquote{Oui}, \enquote{Non} oder \enquote{Abstention
 \vspace{0.5cm}
 
 \begin{tabular}{ b{13.5cm} b{3cm} }
-Acceptez-vous l'initiative No-Billag \enquote{Oui à la suppression des redevances radio et télévision (suppression des redevances Billag)}?
+Acceptez-vous l'initiative \enquote{Pour la souveraineté alimentaire. L’agriculture nous concerne toutes et tous}?
 & \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ \\
 \end{tabular}
 
 \vspace{0.5cm}
 
-\textbf{Votation 2}
+\textbf{Abstimmung 2}
 
 \vspace{0.5cm}
 
 \begin{tabular}{ b{13.5cm} b{3cm} }
-Le Parti Pirate Suisse doit-il ne pas prendre position (liberté de vote)?
+Le Parti Pirate Suisse doit il prendre position en cas de Oui?
 & \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ \\
 \end{tabular}
+
+\vspace{0.5cm}
+
+\begin{tabular}{ b{13.5cm} b{3cm} }
+Le Parti Pirate Suisse doit il prendre position en cas de Non?
+& \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ \\
+\end{tabular}
+
+\vspace{0.5cm}
+
+Veuillez ne pas marquer ou annoter le présent bulletin!
+
+
+\end{minipage}
+
+
+\newpage
+
+\begin{minipage}[t][12.5cm][t]{17.7cm}
+
+\begin{textblock}{6}(7.5,0)
+\includegraphics[width=7.5cm]{ww.pdf}
+\end{textblock}
+
+{\LARGE\textbf{Bulletin de vote 2}} \\
+pour la votation de base du 17~août~2018 \\
+
+\vspace{2cm}
+
+\textbf{Prise de position pour l'initiative \enquote{pour des aliments équitables}}
+
+\vspace{0.1cm}
+Les votes valides sont \enquote{Oui}, \enquote{Non} und \enquote{Abstention}.
+
+\vspace{0.1cm}
+Une prise de position doit être faite en deux votes distincts, conformément à l'article 6, paragraphe 3, du Règlement de l'Assemblée générale et au Règlement de vote.
+
+Les dispositions transitoires de l'article B, paragraphe 3, prévoient que, dans le cas de vote effectué par bulletin envoyé par la poste, les deux votes sont effectués en même temps par bulletin de vote de consentement "oui", "non" ou "abstention" .
+
+\vspace{0.1cm}
+Vous pouvez donc répondre \enquote{Oui}, \enquote{Non} oder \enquote{Abstention} à chaque question. L'option choisie pour chaque votation est celle de la majorité simple des "oui".
+
+\vspace{1cm}
+
+\textbf{Votation 1}
+
+\vspace{0.5cm}
+
+\begin{tabular}{ b{13.5cm} b{3cm} }
+Acceptez-vous l'initiative pour des aliments équitables \enquote{Pour des denrées alimentaires saines et produites dans des conditions équitables et écologiques}?
+& \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ \\
+\end{tabular}
+
+\vspace{0.5cm}
+
+\textbf{Abstimmung 2}
+
+\vspace{0.5cm}
+
+\begin{tabular}{ b{13.5cm} b{3cm} }
+Le Parti Pirate Suisse doit il prendre position en cas de Oui?
+& \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ \\
+\end{tabular}
+
+\vspace{0.5cm}
+
+\begin{tabular}{ b{13.5cm} b{3cm} }
+Le Parti Pirate Suisse doit il prendre position en cas de Non?
+& \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ \\
+\end{tabular}
+
+\vspace{0.5cm}
+
+Veuillez ne pas marquer ou annoter le présent bulletin!
+
+
+\end{minipage}
+
+\newpage
+
+\begin{minipage}[t][12.5cm][t]{17.7cm}
+
+\begin{textblock}{6}(7.5,0)
+\includegraphics[width=7.5cm]{ww.pdf}
+\end{textblock}
+
+{\LARGE\textbf{Bulletin de vote 3}} \\
+pour la votation de base du 17~août~2018 \\
+
+\vspace{2cm}
+
+\textbf{Prise de position pour l'initiative \enquote{vélo}}
+
+\vspace{0.1cm}
+Les votes valides sont \enquote{Oui}, \enquote{Non} und \enquote{Abstention}.
+
+\vspace{0.1cm}
+Une prise de position doit être faite en deux votes distincts, conformément à l'article 6, paragraphe 3, du Règlement de l'Assemblée générale et au Règlement de vote.
+
+Les dispositions transitoires de l'article B, paragraphe 3, prévoient que, dans le cas de vote effectué par bulletin envoyé par la poste, les deux votes sont effectués en même temps par bulletin de vote de consentement "oui", "non" ou "abstention" .
+
+\vspace{0.1cm}
+Vous pouvez donc répondre \enquote{Oui}, \enquote{Non} oder \enquote{Abstention} à chaque question. L'option choisie pour chaque votation est celle de la majorité simple des "oui".
+
+\vspace{1cm}
+
+\textbf{Votation 1}
+
+\vspace{0.5cm}
+
+\begin{tabular}{ b{13.5cm} b{3cm} }
+Acceptez-vous l'initiative vélo \enquote{Pour la promotion des voies cyclables et des chemins et sentiers pédestres}?
+& \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ \\
+\end{tabular}
+
+\vspace{0.5cm}
+
+\textbf{Abstimmung 2}
 
 \vspace{0.5cm}
 
