Final fix of 2018-08-17

--- a/2018-08-17/fr/bulletin.tex
+++ b/2018-08-17/fr/bulletin.tex
@@ -157,10 +157,10 @@ pour la votation de base du \votingdate{} \\
 Les votes valides sont \oui{}, \non{} et \abstention{}.
 
 \vspace{0.2cm}
-Une prise de position doit être faite en deux votes distincts, conformément à l'article 6, paragraphe 3, du Règlement de l'Assemblée générale et au Règlement de vote.
+Une prise de position doit être faite en deux votes distincts, conformément à l'article~6, alinéa~3, du Règlement de l'Assemblée et de Votation.
 
 \vspace{0.2cm}
-Les dispositions transitoires de l'article~B, paragraphe~3, prévoient que, dans le cas de vote effectué par bulletin envoyé par la poste, les deux votations sont effectuées en même temps par bulletin de vote de consentement \oui{}, \non{} ou \abstention{}.
+Les dispositions transitoires de l'article~B, alinéa~3bis, prévoient que, dans le cas de vote effectué par bulletin envoyé par la poste, les deux votations sont effectuées en même temps.
 
 \vspace{0.2cm}
 Dans la votation~1, tu votes selon ton choix pour le sujet soumis. Le résultat de la votation~1 se détermine du nombre de votes en faveur ou contre le sujet soumis.
@@ -224,10 +224,10 @@ pour la votation de base du \votingdate{} \\
 Les votes valides sont \oui{}, \non{} et \abstention{}.
 
 \vspace{0.2cm}
-Une prise de position doit être faite en deux votes distincts, conformément à l'article 6, paragraphe 3, du Règlement de l'Assemblée générale et au Règlement de vote.
+Une prise de position doit être faite en deux votes distincts, conformément à l'article~6, alinéa~3, du Règlement de l'Assemblée et de Votation.
 
 \vspace{0.2cm}
-Les dispositions transitoires de l'article~B, paragraphe~3, prévoient que, dans le cas de vote effectué par bulletin envoyé par la poste, les deux votations sont effectuées en même temps par bulletin de vote de consentement \oui{}, \non{} ou \abstention{}.
+Les dispositions transitoires de l'article~B, alinéa~3bis, prévoient que, dans le cas de vote effectué par bulletin envoyé par la poste, les deux votations sont effectuées en même temps.
 
 \vspace{0.2cm}
 Dans la votation~1, tu votes selon ton choix pour le sujet soumis. Le résultat de la votation~1 se détermine du nombre de votes en faveur ou contre le sujet soumis.
@@ -290,10 +290,10 @@ pour la votation de base du \votingdate{} \\
 Les votes valides sont \oui{}, \non{} et \abstention{}.
 
 \vspace{0.2cm}
-Une prise de position doit être faite en deux votes distincts, conformément à l'article 6, paragraphe 3, du Règlement de l'Assemblée générale et au Règlement de vote.
+Une prise de position doit être faite en deux votes distincts, conformément à l'article~6, alinéa~3, du Règlement de l'Assemblée et de Votation.
 
 \vspace{0.2cm}
-Les dispositions transitoires de l'article~B, paragraphe~3, prévoient que, dans le cas de vote effectué par bulletin envoyé par la poste, les deux votations sont effectuées en même temps par bulletin de vote de consentement \oui{}, \non{} ou \abstention{}.
+Les dispositions transitoires de l'article~B, alinéa~3bis, prévoient que, dans le cas de vote effectué par bulletin envoyé par la poste, les deux votations sont effectuées en même temps.
 
 \vspace{0.2cm}
 Dans la votation~1, tu votes selon ton choix pour le sujet soumis. Le résultat de la votation~1 se détermine du nombre de votes en faveur ou contre le sujet soumis.
